--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "babel-cli": "^6.3.17",
     "babel-core": "^6.3.17",
     "babel-eslint": "^4.1.6",
-    "babel-plugin-transform-async-to-generator": "^6.3.13",
     "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.3.13",
     "babel-register": "^6.3.13",
@@ -29,14 +28,11 @@
   },
   "scripts": {
     "prepublish": "node_modules/babel-cli/bin/babel.js src --out-dir lib",
-    "test": "mocha --require test/bootstrap.js --recursive test"
+    "test": "bin/test"
   },
   "babel": {
     "presets": [
       "es2015"
-    ],
-    "plugins": [
-      "transform-async-to-generator"
     ]
   }
 }
