Okay.. a little short name would be better

--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "event-store-competing-consumer",
+  "name": "ges-competing-consumer",
   "version": "0.0.0",
-  "description": "A Node.js utility for consuming Event Store Competing Consumer subscriptions using Event Store's HTTP API.",
+  "description": "A Node.js utility for consuming (Get) Event Store Competing Consumer subscriptions using Event Store's HTTP API.",
   "main": "lib/index.js",
   "author": "Sebastian Seilund <sebsei@gmail.com>",
   "license": "proprietary",
   "repository": {
     "type": "git",
-    "url": "https://github.com/sebastianseilund/node-event-store-competing-consumer.git"
+    "url": "https://github.com/sebastianseilund/node-ges-competing-consumer.git"
   },
   "dependencies": {
     "promise-queue": "^2.2.3",
