--- a/package.json
+++ b/package.json
@@ -11,28 +11,37 @@
   },
   "dependencies": {
     "promise-queue": "^2.2.3",
-    "request-promise": "^2.0.1"
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6"
   },
   "devDependencies": {
-    "babel-cli": "^6.3.17",
-    "babel-core": "^6.3.17",
-    "babel-eslint": "^4.1.6",
-    "babel-polyfill": "^6.3.14",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-register": "^6.3.13",
+    "@babel/cli": "^7.21.0",
+    "@babel/core": "^7.21.4",
+    "@babel/eslint-parser": "^7.21.3",
+    "@babel/plugin-transform-modules-commonjs": "^7.21.2",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.21.4",
+    "@babel/register": "^7.21.0",
     "chai": "^3.2.0",
-    "eslint": "^0.24.1",
-    "mocha": "^2.3.3",
-    "nock": "^2.15.0",
+    "eslint": "^8.37.0",
+    "mocha": "^10.2.0",
+    "nock": "^13.3.0",
     "sinon": "^1.15.4"
   },
   "scripts": {
-    "prepublish": "node_modules/babel-cli/bin/babel.js src --out-dir lib",
+    "prepublish": "node_modules/@babel/cli/bin/babel.js src --out-dir lib",
     "test": "bin/test"
   },
   "babel": {
-    "presets": [
-      "es2015"
+    "presets": [],
+    "plugins": [
+      [
+        "@babel/plugin-transform-modules-commonjs",
+        {
+          "esModuleInterop": true,
+          "allowTopLevelThis": true
+        }
+      ]
     ]
   }
 }
