--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "url": "https://github.com/sebastianseilund/node-ges-competing-consumer.git"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "promise-queue": "^2.2.3",
-    "request": "^2.88.2",
-    "request-promise": "^4.2.6"
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.21.0",
