--- a/package.json
+++ b/package.json
@@ -2,23 +2,26 @@
   "name": "ges-competing-consumer",
   "version": "0.0.2",
   "description": "A Node.js utility for consuming (Get) Event Store Competing Consumer subscriptions using Event Store's HTTP API.",
-  "main": "lib/index.js",
   "author": "Sebastian Seilund <sebsei@gmail.com>",
   "license": "proprietary",
+  "type": "module",
+  "exports": "./lib/index.js",
+  "engines": {
+    "node": ">=12"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/sebastianseilund/node-ges-competing-consumer.git"
   },
   "dependencies": {
     "axios": "^1.3.4",
-    "promise-queue": "^2.2.3",
-    "request": "^2.88.2"
+    "p-queue": "^7.3.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.21.0",
     "@babel/core": "^7.21.4",
     "@babel/eslint-parser": "^7.21.3",
-    "@babel/plugin-transform-modules-commonjs": "^7.21.2",
+    "@babel/plugin-transform-runtime": "^7.21.4",
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.21.4",
     "@babel/register": "^7.21.0",
@@ -33,13 +36,21 @@
     "test": "bin/test"
   },
   "babel": {
-    "presets": [],
+    "presets": [
+      [
+        "@babel/preset-env",
+        {
+          "targets": {
+            "node": "current"
+          }
+        }
+      ]
+    ],
     "plugins": [
       [
-        "@babel/plugin-transform-modules-commonjs",
+        "@babel/plugin-transform-runtime",
         {
-          "esModuleInterop": true,
-          "allowTopLevelThis": true
+          "regenerator": true
         }
       ]
     ]
