--- a/package.json
+++ b/package.json
@@ -1,58 +1,28 @@
 {
-  "name": "ges-competing-consumer",
-  "version": "0.0.2",
+  "name": "@c11/ges-competing-consumer",
+  "version": "2.0.1",
   "description": "A Node.js utility for consuming (Get) Event Store Competing Consumer subscriptions using Event Store's HTTP API.",
   "author": "Sebastian Seilund <sebsei@gmail.com>",
-  "license": "proprietary",
-  "type": "module",
-  "exports": "./lib/index.js",
-  "engines": {
-    "node": ">=12"
-  },
+  "main": "./lib/index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/sebastianseilund/node-ges-competing-consumer.git"
+    "url": "https://github.com/code11/node-ges-competing-consumer.git"
   },
   "dependencies": {
     "axios": "^1.3.4",
-    "p-queue": "^7.3.4"
+    "p-queue": "^7.3.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.21.0",
-    "@babel/core": "^7.21.4",
-    "@babel/eslint-parser": "^7.21.3",
-    "@babel/plugin-transform-runtime": "^7.21.4",
-    "@babel/polyfill": "^7.12.1",
-    "@babel/preset-env": "^7.21.4",
-    "@babel/register": "^7.21.0",
+    "@types/node": "^18.15.11",
     "chai": "^3.2.0",
+    "esbuild": "^0.17.15",
     "eslint": "^8.37.0",
     "mocha": "^10.2.0",
     "nock": "^13.3.0",
     "sinon": "^1.15.4"
   },
   "scripts": {
-    "prepublish": "node_modules/@babel/cli/bin/babel.js src --out-dir lib",
+    "build": "./node_modules/esbuild/bin/esbuild src/index.ts --bundle --platform=node --target=node10.4 --format=cjs --outfile=lib/index.js",
     "test": "bin/test"
-  },
-  "babel": {
-    "presets": [
-      [
-        "@babel/preset-env",
-        {
-          "targets": {
-            "node": "current"
-          }
-        }
-      ]
-    ],
-    "plugins": [
-      [
-        "@babel/plugin-transform-runtime",
-        {
-          "regenerator": true
-        }
-      ]
-    ]
   }
 }
